--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Economic Calendar</title>
+    <title>Sign Up Form</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -34,7 +34,7 @@
 <body>
     <h1>Economic Calendar</h1>
     <div class="calendar-container">
-        <iframe src="https://sslecal2.investing.com/?columns=exc_flags,exc_currency,exc_importance,exc_actual,exc_forecast,exc_previous&importance=3&features=datepicker,timezone&countries=5&calType=day&timeZone=17&lang=1"></iframe>
+        <iframe src="https://andriigardu.notion.site/15b52eb09cd8809fb667f234d2791ef2?pvs=105"></iframe>
     </div>
 </body>
 </html>
