--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h1>Economic Calendar</h1>
+    <h1>Sign up</h1>
     <div class="calendar-container">
         <iframe src="https://andriigardu.notion.site/15b52eb09cd8809fb667f234d2791ef2?pvs=105"></iframe>
     </div>
