--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <h1>Sign up</h1>
     <div class="calendar-container">
-        <iframe src="https://andriigardu.notion.site/15b52eb09cd8809fb667f234d2791ef2?pvs=105"></iframe>
+        <iframe src="https://andriigardu.notion.site/15b52eb09cd8809fb667f234d2791ef2"></iframe>
     </div>
 </body>
 </html>
